#ifndef KPI_OOP_LABS_RIB_H
#define KPI_OOP_LABS_RIB_H


#include <iostream>

class Rib {
protected:
    int length;
public:
    Rib(int length = 20);
};


#endif //KPI_OOP_LABS_RIB_H
